crates/plotnik-tests/tests/04-emit/types/quantifiers/error_plus_inner_capture_needs_repetition_capture.txt
Q = (program
  (expression_statement
    (identifier) @id
  )+
)
------------------ DIAGNOSTICS -------------------
error: captures `@id` repeat with `+` but are not collected into a list
 --> query.ptk:2:3
  |
2 | /   (expression_statement
3 | |     (identifier) @id
4 | |   )+
  | |____^
  |
help: collect one record per repetition in `@items`
  |
2 |   (expression_statement
3 |     (identifier) @id
4 ~   )+ @items
  |
help: append `@_` instead if the repeated result should be discarded
